--- a/style.css
+++ b/style.css
@@ -1431,3 +1431,82 @@ table {
 .alterCellPrinted {
   background: transparent;
 }
+.btn {
+  border-radius: 25px !important;
+}
+
+/* Zein Global Custom */
+/* Took from Argon Doc */
+.btn {
+  /* font-size: .875rem; */
+  position: relative;
+  transition: all .15s ease;
+  letter-spacing: .025em;
+  text-transform: none;
+  will-change: transform;
+}
+
+.btn-danger {
+  color: #fff;
+  border-color: #f5365c;
+  background-color: #f5365c;
+  box-shadow: 0 4px 6px rgb(50 50 93 / 11%), 0 1px 3px rgb(0 0 0 / 8%);
+}
+
+.btn-danger:hover {
+  color: #fff;
+  border-color: #f5365c;
+  background-color: #f5365c;
+}
+
+.btn-default {
+  color: #fff;
+  border-color: #172b4d;
+  background-color: #172b4d;
+  box-shadow: 0 4px 6px rgb(50 50 93 / 11%), 0 1px 3px rgb(0 0 0 / 8%);
+}
+
+.btn-default:hover {
+  color: #fff;
+  border-color: #172b4d;
+  background-color: #172b4d;
+}
+
+.btn-info {
+  color: #fff;
+  border-color: #11cdef;
+  background-color: #11cdef;
+  box-shadow: 0 4px 6px rgb(50 50 93 / 11%), 0 1px 3px rgb(0 0 0 / 8%);
+}
+
+.btn-info:hover {
+  color: #fff;
+  border-color: #11cdef;
+  background-color: #11cdef;
+}
+
+.btn-success {
+  color: #fff;
+  border-color: #2dce89;
+  background-color: #2dce89;
+  box-shadow: 0 4px 6px rgb(50 50 93 / 11%), 0 1px 3px rgb(0 0 0 / 8%);
+}
+
+.btn-success:hover {
+  color: #fff;
+  border-color: #2dce89;
+  background-color: #2dce89;
+}
+
+.btn-warning {
+  color: #fff;
+  border-color: #fb6340;
+  background-color: #fb6340;
+  box-shadow: 0 4px 6px rgb(50 50 93 / 11%), 0 1px 3px rgb(0 0 0 / 8%);
+}
+
+.btn-warning:hover {
+  color: #fff;
+  border-color: #fb6340;
+  background-color: #fb6340;
+}
