--- a/style.css
+++ b/style.css
@@ -1468,8 +1468,8 @@ table {
 
 .btn-default:hover {
   color: #fff;
-  border-color: #172b4d;
-  background-color: #172b4d;
+  border-color: #364b70;
+  background-color: #364b70;
 }
 
 .btn-info {
