--- a/css/custom.css
+++ b/css/custom.css
@@ -31,7 +31,7 @@ p.lead {
 }
 
 .sidepan > div > ul > li:hover {
-    background-color: #5baaff;
+    background-color: #007bff;
     border-top-left-radius: 35px;
     border-bottom-left-radius: 35px;
 }
@@ -49,7 +49,7 @@ ul.zein-side-nav > li > a {
 }
 
 ul.zein-side-nav > li:hover {
-    background-color: #5baaff;
+    background-color: #007bff;
     border-top-left-radius: 35px;
     border-bottom-left-radius: 35px;
     margin-top: 5px;
